[package]
name = "fontgardener"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.1.0", features = ["derive"] }
csv = "1.1"
norad = { git = "https://github.com/linebender/norad.git", commit = "667a10962609c7078e5aef2520d1d8be8ab9431e", features = ["rayon"] }
plist = { version = "1.3.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.3.0"

[profile.release]
debug = 1
